--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.13.2",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.24",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-select-component": "^0.16.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
